docs/wiki/v2/_index.md
# L0 index (2026-09-20)

- database: `lowcode_pplatform`
- tables: 78
- dict candidates: 505
- instance index: 353
- reviews: 88

## tables

- [[tables/argeement_migratory_record]]
- [[tables/async_io_task]]
- [[tables/authorization_agreement]]
- [[tables/ca_certification_info]]
- [[tables/ca_cfca_upgrade_report]]
- [[tables/ca_fee_company]]
- [[tables/ca_fee_order]]
- [[tables/ca_fee_project_config]]
- [[tables/ca_fee_special_config]]
- [[tables/client_api_sync_error]]
- [[tables/cust_access_secret]]
- [[tables/cust_account_info]]
- [[tables/cust_app_channel_config]]
- [[tables/cust_auth_application]]
- [[tables/cust_auth_application_config]]
- [[tables/cust_build_record]]
- [[tables/cust_certification_info]]
- [[tables/cust_change_cfg]]
- [[tables/cust_change_record]]
- [[tables/cust_company_info]]
- [[tables/cust_company_lifecycle_info]]
- [[tables/cust_company_survey_state]]
- [[tables/cust_company_survey_whitelist]]
- [[tables/cust_config_mapping]]
- [[tables/cust_customized_product]]
- [[tables/cust_group_rel]]
- [[tables/cust_head_company_info]]
- [[tables/cust_interworking_product]]
- [[tables/cust_invite_info]]
- [[tables/cust_message_send_policy]]
- [[tables/cust_oper_change_record]]
- [[tables/cust_person_info]]
- [[tables/cust_project_code_record]]
- [[tables/cust_project_pushcust]]
- [[tables/cust_project_rel]]
- [[tables/cust_role_info]]
- [[tables/cust_setting_config]]
- [[tables/cust_sftp]]
- [[tables/cust_shareholder_info]]
- [[tables/cust_survey_answer]]
- [[tables/cust_user_rel]]
- [[tables/funding_exception_resolution]]
- [[tables/funding_rule_detail]]
- [[tables/funding_rule_front_cfg]]
- [[tables/funding_rule_info]]
- [[tables/gpt_learn_poster_log]]
- [[tables/lc_sql_init_log]]
- [[tables/migratory_user_record]]
- [[tables/open_sso_channel]]
- [[tables/operation_user]]
- [[tables/org_manage]]
- [[tables/platform_product]]
- [[tables/platform_product_client]]
- [[tables/platform_product_cust_role]]
- [[tables/project_file_info]]
- [[tables/short_link]]
- [[tables/tenant_interworking_product]]
- [[tables/tenant_interworking_project]]
- [[tables/tenant_migarory_log]]
- [[tables/tenant_migarory_log_bak]]
- [[tables/tenant_product]]
- [[tables/tenant_product_menu]]
- [[tables/tenant_product_menu_res]]
- [[tables/tenant_project]]
- [[tables/tenant_project_approval]]
- [[tables/tenant_project_approval_business_info]]
- [[tables/tenant_project_approval_flow]]
- [[tables/tenant_project_approval_flow_comment]]
- [[tables/tenant_project_approval_flow_config]]
- [[tables/tenant_project_approval_flow_credit]]
- [[tables/tenant_project_approval_flow_file]]
- [[tables/tenant_project_approval_flow_node]]
- [[tables/tenant_setting_config]]
- [[tables/tenant_setting_config_share]]
- [[tables/wec_project_cust_operation_rel]]
- [[tables/wec_project_operation_rel]]
- [[tables/wechat_project_approval_apply]]
- [[tables/wechat_project_approval_field_history]]

## dicts

- [[dicts/argeement_migratory_record__platform_product_code]]
- [[dicts/argeement_migratory_record__status]]
- [[dicts/argeement_migratory_record__agreement_type]]
- [[dicts/argeement_migratory_record__sign_mode]]
- [[dicts/argeement_migratory_record__is_new]]
- [[dicts/argeement_migratory_record__pull_num]]
- [[dicts/argeement_migratory_record__enable]]
- [[dicts/async_io_task__task_type]]
- [[dicts/async_io_task__menu_code]]
- [[dicts/async_io_task__status]]
- [[dicts/async_io_task__is_deleted]]
- [[dicts/async_io_task__enable]]
- [[dicts/authorization_agreement__platform_product_code]]
- [[dicts/authorization_agreement__authed_status]]
- [[dicts/authorization_agreement__company_type]]
- [[dicts/authorization_agreement__enable]]
- [[dicts/authorization_agreement__creation_type]]
- [[dicts/ca_certification_info__cust_type]]
- [[dicts/ca_certification_info__op_type]]
- [[dicts/ca_certification_info__data_source]]
- [[dicts/ca_certification_info__submit_status]]
- [[dicts/ca_certification_info__enable]]
- [[dicts/ca_certification_info__head_company_data]]
- [[dicts/ca_cfca_upgrade_report__source_system]]
- [[dicts/ca_cfca_upgrade_report__company_type]]
- [[dicts/ca_cfca_upgrade_report__biz_module]]
- [[dicts/ca_cfca_upgrade_report__todo_triggered]]
- [[dicts/ca_cfca_upgrade_report__enable]]
- [[dicts/ca_fee_company__locked_annual_fee]]
- [[dicts/ca_fee_company__fee_locked]]
- [[dicts/ca_fee_company__pay_status]]
- [[dicts/ca_fee_company__source_company_type]]
- [[dicts/ca_fee_company__renew_remind_sent]]
- [[dicts/ca_fee_company__special_config_flag]]
- [[dicts/ca_fee_company__special_annual_fee]]
- [[dicts/ca_fee_company__ca_status]]
- [[dicts/ca_fee_company__enable]]
- [[dicts/ca_fee_order__company_type]]
- [[dicts/ca_fee_order__order_type]]
- [[dicts/ca_fee_order__order_status]]
- [[dicts/ca_fee_order__annual_fee]]
- [[dicts/ca_fee_order__pay_amount]]
- [[dicts/ca_fee_order__pay_method]]
- [[dicts/ca_fee_order__bocom_plfm_bsn_id]]
- [[dicts/ca_fee_order__bocom_txn_sts]]
- [[dicts/ca_fee_order__agreement_version]]
- [[dicts/ca_fee_order__agreement_signed]]
- [[dicts/ca_fee_order__invoice_status]]
- [[dicts/ca_fee_order__version]]
- [[dicts/ca_fee_order__enable]]
- [[dicts/ca_fee_project_config__charge_enabled]]
- [[dicts/ca_fee_project_config__supplier_annual_fee]]
- [[dicts/ca_fee_project_config__core_annual_fee]]
- [[dicts/ca_fee_project_config__agreement_version]]
- [[dicts/ca_fee_project_config__enable]]
- [[dicts/ca_fee_special_config__annual_fee]]
- [[dicts/ca_fee_special_config__enable]]
- [[dicts/client_api_sync_error__enable]]
- [[dicts/client_api_sync_error__retry_num]]
- [[dicts/cust_access_secret__channel]]
- [[dicts/cust_access_secret__encry_type]]
- [[dicts/cust_access_secret__enable]]
- [[dicts/cust_access_secret__key_num]]
- [[dicts/cust_access_secret__status_query_license_enabled]]
- [[dicts/cust_account_info__name]]
- [[dicts/cust_account_info__enable]]
- [[dicts/cust_account_info__default_account_flag]]
- [[dicts/cust_account_info__account_type]]
- [[dicts/cust_account_info__status]]
- [[dicts/cust_account_info__error_try_count]]
- [[dicts/cust_account_info__auth_state]]
- [[dicts/cust_account_info__payment_remaining_count]]
- [[dicts/cust_account_info__bank_id]]
- [[dicts/cust_app_channel_config__app_id]]
- [[dicts/cust_app_channel_config__code]]
- [[dicts/cust_app_channel_config__name]]
- [[dicts/cust_app_channel_config__enable]]
- [[dicts/cust_auth_application__platform_product_code]]
- [[dicts/cust_auth_application__enable]]
- [[dicts/cust_auth_application__open_status]]
- [[dicts/cust_build_record__enable]]
- [[dicts/cust_build_record__electronic_auth_sign_status]]
- [[dicts/cust_certification_info__enable]]
- [[dicts/cust_certification_info__certification_type]]
- [[dicts/cust_certification_info__auto_verify_status]]
- [[dicts/cust_certification_info__auto_verify_count]]
- [[dicts/cust_certification_info__manual_verify_status]]
- [[dicts/cust_change_cfg__cust_type]]
- [[dicts/cust_change_cfg__identify_style]]
- [[dicts/cust_change_cfg__head_company]]
- [[dicts/cust_change_cfg__open_process]]
- [[dicts/cust_change_cfg__item_code]]
- [[dicts/cust_change_cfg__enable]]
- [[dicts/cust_change_cfg__client_type]]
- [[dicts/cust_change_record__alter_mode]]
- [[dicts/cust_change_record__admin_auth]]
- [[dicts/cust_change_record__legal_auth]]
- [[dicts/cust_change_record__cust_type]]
- [[dicts/cust_change_record__enable]]
- [[dicts/cust_change_record__msg_send]]
- [[dicts/cust_change_record__need_cust_confirm]]
- [[dicts/cust_change_record__need_resign_auth]]
- [[dicts/cust_change_record__oper_channel]]
- [[dicts/cust_change_record__electronic_auth_sign_status]]
- [[dicts/cust_company_info__enable]]
- [[dicts/cust_company_info__legal_certification_type]]
- [[dicts/cust_company_info__need_register_ca]]
- [[dicts/cust_company_info__need_register_bs]]
- [[dicts/cust_company_info__ca_register_status]]
- [[dicts/cust_company_info__bs_register_status]]
- [[dicts/cust_company_info__cust_build_type]]
- [[dicts/cust_company_info__cust_build_status]]
- [[dicts/cust_company_info__identify_style]]
- [[dicts/cust_company_info__cust_scale]]
- [[dicts/cust_company_info__data_type]]
- [[dicts/cust_company_info__contact_province_code]]
- [[dicts/cust_company_info__contact_city_code]]
- [[dicts/cust_company_info__contact_address]]
- [[dicts/cust_company_info__signing_mode]]
- [[dicts/cust_company_info__invoicing_bank_no]]
- [[dicts/cust_company_info__sign_mode]]
- [[dicts/cust_company_info__pc_task_id]]
- [[dicts/cust_company_info__cust_status]]
- [[dicts/cust_company_info__apply_type]]
- [[dicts/cust_company_info__abroad_cust]]
- [[dicts/cust_company_info__outside_org]]
- [[dicts/cust_company_info__group_company]]
- [[dicts/cust_company_info__head_company]]
- [[dicts/cust_company_info__legal_realname_status]]
- [[dicts/cust_company_info__test_data]]
- [[dicts/cust_company_info__need_charge]]
- [[dicts/cust_company_info__check_status]]
- [[dicts/cust_company_info__audit_back_flag]]
- [[dicts/cust_company_info__cert_no_flag]]
- [[dicts/cust_company_info__cust_source]]
- [[dicts/cust_company_info__migarory_auth_aggrement_flag]]
- [[dicts/cust_company_info__auth_aggrement_supplement_flag]]
- [[dicts/cust_company_info__third_auth_status]]
- [[dicts/cust_company_info__channel_code]]
- [[dicts/cust_company_lifecycle_info__type]]
- [[dicts/cust_company_lifecycle_info__enable]]
- [[dicts/cust_company_survey_state__first_visitor_lottery_shown]]
- [[dicts/cust_company_survey_state__code]]
- [[dicts/cust_company_survey_state__enable]]
- [[dicts/cust_company_survey_whitelist__enable]]
- [[dicts/cust_config_mapping__outer_channel]]
- [[dicts/cust_config_mapping__inner_code]]
- [[dicts/cust_config_mapping__outer_code]]
- [[dicts/cust_config_mapping__type]]
- [[dicts/cust_config_mapping__groups]]
- [[dicts/cust_config_mapping__enable]]
- [[dicts/cust_customized_product__code]]
- [[dicts/cust_customized_product__enable]]
- [[dicts/cust_group_rel__root_flag]]
- [[dicts/cust_group_rel__level]]
- [[dicts/cust_group_rel__status]]
- [[dicts/cust_group_rel__enable]]
- [[dicts/cust_head_company_info__legal_certification_type]]
- [[dicts/cust_head_company_info__enable]]
- [[dicts/cust_interworking_product__open_status]]
- [[dicts/cust_interworking_product__platform_product_code]]
- [[dicts/cust_interworking_product__agree_authorization_flag]]
- [[dicts/cust_interworking_product__ref_cust_interworking_product_tenant_interworking_product]]
- [[dicts/cust_interworking_product__enable]]
- [[dicts/cust_invite_info__progress]]
- [[dicts/cust_invite_info__enable]]
- [[dicts/cust_oper_change_record__change_type]]
- [[dicts/cust_oper_change_record__enable]]
- [[dicts/cust_person_info__enable]]
- [[dicts/cust_person_info__certification_type]]
- [[dicts/cust_person_info__status]]
- [[dicts/cust_person_info__user_type]]
- [[dicts/cust_person_info__face_status]]
- [[dicts/cust_person_info__realname_status]]
- [[dicts/cust_person_info__test_data]]
- [[dicts/cust_person_info__company_type]]
- [[dicts/cust_person_info__cust_build_status]]
- [[dicts/cust_person_info__operator_push_system]]
- [[dicts/cust_person_info__skip_auth_flag]]
- [[dicts/cust_person_info__source]]
- [[dicts/cust_person_info__real_name_result]]
- [[dicts/cust_project_code_record__status]]
- [[dicts/cust_project_code_record__enable]]
- [[dicts/cust_project_pushcust__source_sso_channel]]
- [[dicts/cust_project_pushcust__enable]]
- [[dicts/cust_project_rel__company_type]]
- [[dicts/cust_project_rel__enable]]
- [[dicts/cust_project_rel__remark]]
- [[dicts/cust_project_rel__show_flag]]
- [[dicts/cust_project_rel__config_model]]
- [[dicts/cust_project_rel__status]]
- [[dicts/cust_project_rel__ref_cust_project_rel_platform_product]]
- [[dicts/cust_project_rel__op_contact_a]]
- [[dicts/cust_project_rel__verification_contact]]
- [[dicts/cust_project_rel__risk_control_contact_a]]
- [[dicts/cust_project_rel__top_flag]]
- [[dicts/cust_project_rel__project_open_status]]
- [[dicts/cust_role_info__enable]]
- [[dicts/cust_role_info__status]]
- [[dicts/cust_role_info__role_type]]
- [[dicts/cust_setting_config__code]]
- [[dicts/cust_setting_config__enable]]
- [[dicts/cust_setting_config__need_verify_no_key]]
- [[dicts/cust_setting_config__user_agreement]]
- [[dicts/cust_setting_config__privacy_policy_agreement]]
- [[dicts/cust_setting_config__authorization_offline]]
- [[dicts/cust_setting_config__need_auth_verify]]
- [[dicts/cust_setting_config__face_recognition]]
- [[dicts/cust_setting_config__payment_verification]]
- [[dicts/cust_setting_config__payment_maximum_number]]
- [[dicts/cust_setting_config__invitation_code_period]]
- [[dicts/cust_setting_config__sending_interval]]
- [[dicts/cust_sftp__host]]
- [[dicts/cust_sftp__port]]
- [[dicts/cust_sftp__user_name]]
- [[dicts/cust_sftp__enable]]
- [[dicts/cust_sftp__channel]]
- [[dicts/cust_shareholder_info__code]]
- [[dicts/cust_shareholder_info__name]]
- [[dicts/cust_shareholder_info__enable]]
- [[dicts/cust_shareholder_info__remark]]
- [[dicts/cust_shareholder_info__ref_cust_company_info]]
- [[dicts/cust_shareholder_info__certification_type]]
- [[dicts/cust_shareholder_info__certification_no]]
- [[dicts/cust_shareholder_info__fund_amount_act]]
- [[dicts/cust_shareholder_info__fund_scale]]
- [[dicts/cust_shareholder_info__relation_type]]
- [[dicts/cust_survey_answer__question_no]]
- [[dicts/cust_survey_answer__survey_code]]
- [[dicts/cust_survey_answer__enable]]
- [[dicts/cust_user_rel__code]]
- [[dicts/cust_user_rel__company_type]]
- [[dicts/cust_user_rel__type_status]]
- [[dicts/cust_user_rel__user_type]]
- [[dicts/cust_user_rel__enable]]
- [[dicts/funding_exception_resolution__funding_party_code]]
- [[dicts/funding_exception_resolution__product_code]]
- [[dicts/funding_exception_resolution__enable]]
- [[dicts/funding_rule_detail__rule_layer]]
- [[dicts/funding_rule_detail__version]]
- [[dicts/funding_rule_detail__product_code]]
- [[dicts/funding_rule_detail__enable]]
- [[dicts/funding_rule_detail__check_scene]]
- [[dicts/funding_rule_front_cfg__rule_layer]]
- [[dicts/funding_rule_front_cfg__product_code]]
- [[dicts/funding_rule_front_cfg__key_type]]
- [[dicts/funding_rule_front_cfg__rule_key]]
- [[dicts/funding_rule_front_cfg__enable]]
- [[dicts/funding_rule_front_cfg__check_scene]]
- [[dicts/funding_rule_info__product_code]]
- [[dicts/funding_rule_info__rule_status]]
- [[dicts/funding_rule_info__version]]
- [[dicts/funding_rule_info__enable]]
- [[dicts/gpt_learn_poster_log__enable]]
- [[dicts/lc_sql_init_log__name]]
- [[dicts/migratory_user_record__is_login]]
- [[dicts/migratory_user_record__enable]]
- [[dicts/open_sso_channel__channel_code]]
- [[dicts/open_sso_channel__channel_kind]]
- [[dicts/open_sso_channel__app_id]]
- [[dicts/open_sso_channel__sso_client_id]]
- [[dicts/open_sso_channel__open_mode_default]]
- [[dicts/open_sso_channel__sso_sync_status]]
- [[dicts/open_sso_channel__enable]]
- [[dicts/operation_user__deleted]]
- [[dicts/operation_user__enable]]
- [[dicts/platform_product__code]]
- [[dicts/platform_product__product_type]]
- [[dicts/platform_product__platform_flag]]
- [[dicts/platform_product__platform_code]]
- [[dicts/platform_product__multiple_project_flag]]
- [[dicts/platform_product__multiple_cust_role_flag]]
- [[dicts/platform_product__product_code]]
- [[dicts/platform_product__product_cate]]
- [[dicts/platform_product__product_ref_num]]
- [[dicts/platform_product__product_status]]
- [[dicts/platform_product__product_construction_status]]
- [[dicts/platform_product__max_financing_amount_flag]]
- [[dicts/platform_product__multiple_client_type]]
- [[dicts/platform_product__project_code]]
- [[dicts/platform_product__app_code]]
- [[dicts/platform_product__menu_type]]
- [[dicts/platform_product__default_menu_index]]
- [[dicts/platform_product__wkfl_flag]]
- [[dicts/platform_product__enable]]
- [[dicts/platform_product__act_procinst_status]]
- [[dicts/platform_product__general_flag]]
- [[dicts/platform_product_client__platform_product_id]]
- [[dicts/platform_product_client__client_type]]
- [[dicts/platform_product_client__status]]
- [[dicts/platform_product_client__multiple_type]]
- [[dicts/platform_product_client__wx_flag]]
- [[dicts/platform_product_client__link_type]]
- [[dicts/platform_product_cust_role__product_code]]
- [[dicts/platform_product_cust_role__company_type_code]]
- [[dicts/platform_product_cust_role__enable]]
- [[dicts/project_file_info__title]]
- [[dicts/project_file_info__content]]
- [[dicts/project_file_info__file_type]]
- [[dicts/project_file_info__enable]]
- [[dicts/short_link__type]]
- [[dicts/short_link__is_forever]]
- [[dicts/short_link__enable]]
- [[dicts/tenant_interworking_product__platform_product_id]]
- [[dicts/tenant_interworking_product__product_cate]]
- [[dicts/tenant_interworking_product__open_status]]
- [[dicts/tenant_interworking_product__max_financing_amount_flag]]
- [[dicts/tenant_interworking_product__credit_measures]]
- [[dicts/tenant_interworking_product__max_financing_period]]
- [[dicts/tenant_interworking_product__max_financing_amount]]
- [[dicts/tenant_interworking_product__platform_product_code]]
- [[dicts/tenant_interworking_product__target_sys_channel]]
- [[dicts/tenant_interworking_product__scope]]
- [[dicts/tenant_interworking_product__ref_tenant_interworking_product_platform_product]]
- [[dicts/tenant_interworking_product__ref_tenant_interworking_product_tenant_setting_config]]
- [[dicts/tenant_interworking_product__enable]]
- [[dicts/tenant_interworking_project__code]]
- [[dicts/tenant_interworking_project__platform_product_code]]
- [[dicts/tenant_interworking_project__ref_tenant_interworking_project_tenant_setting_config]]
- [[dicts/tenant_interworking_project__ref_tenant_interworking_project_tenant_interworking_product]]
- [[dicts/tenant_interworking_project__enable]]
- [[dicts/tenant_migarory_log__direction]]
- [[dicts/tenant_migarory_log__type]]
- [[dicts/tenant_migarory_log__status]]
- [[dicts/tenant_migarory_log__enable]]
- [[dicts/tenant_migarory_log_bak__name]]
- [[dicts/tenant_migarory_log_bak__direction]]
- [[dicts/tenant_migarory_log_bak__type]]
- [[dicts/tenant_migarory_log_bak__status]]
- [[dicts/tenant_migarory_log_bak__success_number]]
- [[dicts/tenant_migarory_log_bak__falied_number]]
- [[dicts/tenant_migarory_log_bak__total_number]]
- [[dicts/tenant_migarory_log_bak__enable]]
- [[dicts/tenant_product__platform_product_id]]
- [[dicts/tenant_product__product_cate]]
- [[dicts/tenant_product__max_financing_amount]]
- [[dicts/tenant_product__product_agreement]]
- [[dicts/tenant_product__open_status]]
- [[dicts/tenant_product__max_financing_amount_flag]]
- [[dicts/tenant_product__platform_product_code]]
- [[dicts/tenant_product__is_migratory]]
- [[dicts/tenant_product__view_order]]
- [[dicts/tenant_product__ref_tenant_product_project_code]]
- [[dicts/tenant_product__enable]]
- [[dicts/tenant_product__multiple]]
- [[dicts/tenant_product_menu__product_code]]
- [[dicts/tenant_product_menu__company_type]]
- [[dicts/tenant_product_menu__enable]]
- [[dicts/tenant_product_menu_res__product_code]]
- [[dicts/tenant_product_menu_res__company_type]]
- [[dicts/tenant_product_menu_res__enable]]
- [[dicts/tenant_project__project_status]]
- [[dicts/tenant_project__test_data]]
- [[dicts/tenant_project__ref_tenant_project_platform_product]]
- [[dicts/tenant_project__enable]]
- [[dicts/tenant_project__platform_product_code]]
- [[dicts/tenant_project__source]]
- [[dicts/tenant_project__is_prd]]
- [[dicts/tenant_project__config_model]]
- [[dicts/tenant_project__operater_card_type]]
- [[dicts/tenant_project__cover_operator]]
- [[dicts/tenant_project__share_flag]]
- [[dicts/tenant_project__project_config_version]]
- [[dicts/tenant_project__op_contact_a]]
- [[dicts/tenant_project__verification_contact]]
- [[dicts/tenant_project__risk_control_contact_a]]
- [[dicts/tenant_project__business_group]]
- [[dicts/tenant_project__project_tag]]
- [[dicts/tenant_project__project_relation]]
- [[dicts/tenant_project__top_flag]]
- [[dicts/tenant_project__cust_oper_show]]
- [[dicts/tenant_project__is_add]]
- [[dicts/tenant_project_approval__is_online_approval]]
- [[dicts/tenant_project_approval__sp_no]]
- [[dicts/tenant_project_approval__project_type]]
- [[dicts/tenant_project_approval__simple_mode]]
- [[dicts/tenant_project_approval__wf_status]]
- [[dicts/tenant_project_approval__is_low_risk]]
- [[dicts/tenant_project_approval__is_latest]]
- [[dicts/tenant_project_approval__enable]]
- [[dicts/tenant_project_approval__is_add]]
- [[dicts/tenant_project_approval_business_info__product_code]]
- [[dicts/tenant_project_approval_business_info__source_system]]
- [[dicts/tenant_project_approval_business_info__project_config_version]]
- [[dicts/tenant_project_approval_business_info__asset_list_mode]]
- [[dicts/tenant_project_approval_business_info__service_fee_min_amount]]
- [[dicts/tenant_project_approval_business_info__review_fee]]
- [[dicts/tenant_project_approval_business_info__enable]]
- [[dicts/tenant_project_approval_flow__node_code]]
- [[dicts/tenant_project_approval_flow__node_order]]
- [[dicts/tenant_project_approval_flow__node_status]]
- [[dicts/tenant_project_approval_flow__is_optional]]
- [[dicts/tenant_project_approval_flow__is_operate]]
- [[dicts/tenant_project_approval_flow__enable]]
- [[dicts/tenant_project_approval_flow_comment__ref_tenant_project_approval_flow_comment_approval]]
- [[dicts/tenant_project_approval_flow_comment__enable]]
- [[dicts/tenant_project_approval_flow_config__flow_code]]
- [[dicts/tenant_project_approval_flow_config__node_code]]
- [[dicts/tenant_project_approval_flow_config__node_order]]
- [[dicts/tenant_project_approval_flow_config__is_optional]]
- [[dicts/tenant_project_approval_flow_config__is_operate]]
- [[dicts/tenant_project_approval_flow_config__enable]]
- [[dicts/tenant_project_approval_flow_credit__is_group_limit]]
- [[dicts/tenant_project_approval_flow_credit__is_recyclable]]
- [[dicts/tenant_project_approval_flow_credit__enable]]
- [[dicts/tenant_project_approval_flow_file__catg_id]]
- [[dicts/tenant_project_approval_flow_file__enable]]
- [[dicts/tenant_project_approval_flow_node__node_code]]
- [[dicts/tenant_project_approval_flow_node__node_order]]
- [[dicts/tenant_project_approval_flow_node__operate_type]]
- [[dicts/tenant_project_approval_flow_node__approval_type]]
- [[dicts/tenant_project_approval_flow_node__is_low_risk]]
- [[dicts/tenant_project_approval_flow_node__enable]]
- [[dicts/tenant_project_approval_flow_node__is_back_agreement]]
- [[dicts/tenant_setting_config__source]]
- [[dicts/tenant_setting_config__privacy_policy_agreement]]
- [[dicts/tenant_setting_config__user_protocol_agreement]]
- [[dicts/tenant_setting_config__auth_agreement]]
- [[dicts/tenant_setting_config__dbass_app_id]]
- [[dicts/tenant_setting_config__mp_sso_sys_channel]]
- [[dicts/tenant_setting_config__enable]]
- [[dicts/tenant_setting_config__act_procinst_status]]
- [[dicts/tenant_setting_config__need_hfive]]
- [[dicts/tenant_setting_config__need_mp_wx]]
- [[dicts/tenant_setting_config__status]]
- [[dicts/tenant_setting_config__person_auth_agreement]]
- [[dicts/tenant_setting_config__self_registration_flag]]
- [[dicts/tenant_setting_config__company_share_flag]]
- [[dicts/tenant_setting_config__operator_ai_customer]]
- [[dicts/tenant_setting_config__ai_zc_sysnum]]
- [[dicts/tenant_setting_config__ai_zc_channel]]
- [[dicts/tenant_setting_config__portal_flag]]
- [[dicts/tenant_setting_config__share_flag]]
- [[dicts/tenant_setting_config__recall_auth_doc_flag]]
- [[dicts/tenant_setting_config__core_bosc_company_id_property_requried]]
- [[dicts/tenant_setting_config__xib_factor_contract_no_property_requried]]
- [[dicts/tenant_setting_config__company_size_property_requried]]
- [[dicts/tenant_setting_config__billing_type_property_requried]]
- [[dicts/tenant_setting_config__cash_contract_no_property_requried]]
- [[dicts/tenant_setting_config__zybank_cash_contract_amt_property_requried]]
- [[dicts/tenant_setting_config__lybank_cash_contract_no_property_requried]]
- [[dicts/tenant_setting_config__composite_field_property_requried]]
- [[dicts/tenant_setting_config__pushing_status]]
- [[dicts/tenant_setting_config__is_stack]]
- [[dicts/tenant_setting_config__finance_org_type_property_requried]]
- [[dicts/tenant_setting_config__sign_flag]]
- [[dicts/tenant_setting_config__main_tenant_flg_en]]
- [[dicts/tenant_setting_config__bank_branch_property_requried]]
- [[dicts/tenant_setting_config__oper_auth_agreement]]
- [[dicts/tenant_setting_config__project_code_required]]
- [[dicts/tenant_setting_config__customer_card_type]]
- [[dicts/tenant_setting_config__op_update_user]]
- [[dicts/tenant_setting_config__generate_electronic_auth_flag]]
- [[dicts/tenant_setting_config__access_mode]]
- [[dicts/tenant_setting_config__use_theme_after_login]]
- [[dicts/tenant_setting_config_share__code]]
- [[dicts/tenant_setting_config_share__source_id]]
- [[dicts/tenant_setting_config_share__source]]
- [[dicts/tenant_setting_config_share__cust_service_number]]
- [[dicts/tenant_setting_config_share__privacy_policy_agreement]]
- [[dicts/tenant_setting_config_share__user_protocol_agreement]]
- [[dicts/tenant_setting_config_share__auth_agreement]]
- [[dicts/tenant_setting_config_share__dbass_app_id]]
- [[dicts/tenant_setting_config_share__enable]]
- [[dicts/tenant_setting_config_share__act_procinst_status]]
- [[dicts/tenant_setting_config_share__tenant_flg_en]]
- [[dicts/tenant_setting_config_share__uat_mp_app_id]]
- [[dicts/tenant_setting_config_share__prd_mp_app_id]]
- [[dicts/tenant_setting_config_share__need_hfive]]
- [[dicts/tenant_setting_config_share__need_mp_wx]]
- [[dicts/tenant_setting_config_share__status]]
- [[dicts/tenant_setting_config_share__person_auth_agreement]]
- [[dicts/tenant_setting_config_share__self_registration_flag]]
- [[dicts/tenant_setting_config_share__company_share_flag]]
- [[dicts/tenant_setting_config_share__portal_flag]]
- [[dicts/tenant_setting_config_share__share_flag]]
- [[dicts/wec_project_cust_operation_rel__company_type]]
- [[dicts/wec_project_cust_operation_rel__op_contact_a]]
- [[dicts/wec_project_cust_operation_rel__verification_contact]]
- [[dicts/wec_project_cust_operation_rel__risk_control_contact_a]]
- [[dicts/wec_project_cust_operation_rel__enable]]
- [[dicts/wec_project_cust_operation_rel__top_flag]]
- [[dicts/wec_project_operation_rel__op_contact_a]]
- [[dicts/wec_project_operation_rel__verification_contact]]
- [[dicts/wec_project_operation_rel__risk_control_contact_a]]
- [[dicts/wec_project_operation_rel__custom_field_one]]
- [[dicts/wec_project_operation_rel__custom_field_two]]
- [[dicts/wec_project_operation_rel__project_tag]]
- [[dicts/wec_project_operation_rel__enable]]
- [[dicts/wec_project_operation_rel__top_flag]]
- [[dicts/wechat_project_approval_apply__prd]]
- [[dicts/wechat_project_approval_apply__op_contact]]
- [[dicts/wechat_project_approval_apply__archives_contact]]
- [[dicts/wechat_project_approval_apply__risk_control_contact]]
- [[dicts/wechat_project_approval_apply__enable]]
- [[dicts/wechat_project_approval_apply__act_procinst_status]]
- [[dicts/wechat_project_approval_apply__project_type]]
- [[dicts/wechat_project_approval_apply__ka_white_label]]
- [[dicts/wechat_project_approval_apply__project_phase]]
- [[dicts/wechat_project_approval_apply__data_source]]
- [[dicts/wechat_project_approval_apply__bank_quota]]
- [[dicts/wechat_project_approval_field_history__field_name]]
- [[dicts/wechat_project_approval_field_history__change_source]]
- [[dicts/wechat_project_approval_field_history__operator_name]]
- [[dicts/wechat_project_approval_field_history__enable]]
